--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "mongodb": "^2.2.28",
     "mongoose": "^4.10.5",
-    "passport-facebook": "^2.1.1"
+    "passport-facebook": "^2.1.1",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "standard": "^10.0.2"
