--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/index.js",
   "scripts": {
     "test": "nodemon app/index.js",
-    "start": "nodemon apifrugal.js"
+    "start": "NODE_ENV=production node app/index.js"
   },
   "repository": {
     "type": "git",
