--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/vacrozet/Matcha#readme",
   "dependencies": {
     "axios": "^0.16.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongodb": "^2.2.28",
@@ -27,6 +28,7 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "colors": "^1.1.2",
     "standard": "^10.0.2"
   }
 }
