--- a/front/package.json
+++ b/front/package.json
@@ -8,9 +8,11 @@
     "moment-timezone": "^0.5.13",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^4.1.2",
     "react-navbar": "^1.0.0",
     "react-notification-system": "^0.2.15",
     "react-router-dom": "^4.2.2",
+    "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.73.1"
   },
   "devDependencies": {
