--- a/front/package.json
+++ b/front/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "elemental": "^0.6.1",
     "moment-range": "^3.0.3",
     "moment-timezone": "^0.5.13",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.1.2",
     "react-navbar": "^1.0.0",
