--- a/API/package.json
+++ b/API/package.json
@@ -24,8 +24,10 @@
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "fs": "0.0.1-security",
+    "google-geolocation": "^1.0.1",
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.5",
+    "node-mac-address": "^1.0.0",
     "passport-facebook": "^2.1.1",
     "path": "^0.12.7",
     "uuid": "^3.0.1",
