--- a/API/package.json
+++ b/API/package.json
@@ -30,6 +30,7 @@
     "node-mac-address": "^1.0.0",
     "passport-facebook": "^2.1.1",
     "path": "^0.12.7",
+    "socket.io": "^2.0.3",
     "uuid": "^3.0.1",
     "uuid-validate": "0.0.2"
   },
