--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
-    "elemental": "^0.6.1",
+    "material-ui": "^0.19.2",
     "moment-range": "^3.0.3",
     "moment-timezone": "^0.5.13",
     "react": "^15.6.1",
@@ -14,8 +14,8 @@
     "react-navbar": "^1.0.0",
     "react-notification-system": "^0.2.15",
     "react-router-dom": "^4.2.2",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.73.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
