--- a/API/package.json
+++ b/API/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.5",
     "node-mac-address": "^1.0.0",
+    "nodemailer": "^4.1.1",
     "passport-facebook": "^2.1.1",
     "path": "^0.12.7",
     "socket.io": "^2.0.3",
