--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "react-notification-system": "^0.2.15",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^2.0.1",
+    "react-websocket": "^1.2.0",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
