--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^2.0.1",
     "react-websocket": "^1.2.0",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
