--- a/API/package.json
+++ b/API/package.json
@@ -25,6 +25,7 @@
     "express": "^4.15.3",
     "fs": "0.0.1-security",
     "google-geolocation": "^1.0.1",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.5",
     "node-mac-address": "^1.0.0",
