--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "material-ui": "^0.19.2",
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.3",
     "moment-range": "^3.0.3",
     "moment-timezone": "^0.5.13",
     "react": "^15.6.1",
