--- a/API/package.json
+++ b/API/package.json
@@ -35,7 +35,8 @@
     "path": "^0.12.7",
     "socket.io": "^2.0.3",
     "uuid": "^3.0.1",
-    "uuid-validate": "0.0.2"
+    "uuid-validate": "0.0.2",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "colors": "^1.1.2",
